tooling/nargo_cli/tests/snapshots/execution_success/nested_if_then_block_same_cond/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(a: bool, b: [[bool; 2]; 3]) -> pub [bool; 2] {
    if !!a {
        if !!a {
            b[0]
        } else {
            b[0]
        }
    } else {
        b[0]
    }
}
