tooling/nargo_cli/tests/snapshots/execution_success/nested_if_then_block_same_cond/execute__tests__force_brillig_false_inliner_-9223372036854775808.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "a",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      },
      {
        "name": "b",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "array",
            "length": 2,
            "type": {
              "kind": "boolean"
            }
          }
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 2,
        "type": {
          "kind": "boolean"
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/7WSYQrDIAyFq66ru01itMZ/u8pk9v5HWEsjyOa/2Qch+omRJ09Np+xeD1mrvYz0um+Z6jDdYabDbh02d9i9eb9KS39KJ1i9L9EVJHyBS5kD+JBXRsbA4e2YqLDnmHKKkNBTwS0k2uCUambBf8Jl3Cy40rMe6NkO9FyzcWhp/NdsGTmfJRvf/3PcsdOvPiwHCgvgAgAA",
  "debug_symbols": "dY/RCoMwDEX/Jc990IeNzV8ZQ2KNUghtia0wxH9fFIsy2FN6c3ou7QI9dXlsnR/CBM1rgU4csxtbDhaTC163y2qgxDYJka7gwtWKKOQTND4zG5iR835piuj3mVCUVgbI9zq1cHBM22k1p139V+vH/ZDr56nf1H9rQuvk98UzisOO6YhD9vZC0ycWUn4cJVjqs9DWtDPt/gI=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": []
}
